--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Rakutentw",
   "version": "0.1.0",
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "^0.4.4",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-compass": "^0.7.2",
